fix: gap between list items

--- a/src/atoms/List/List.module.scss
+++ b/src/atoms/List/List.module.scss
@@ -2,4 +2,7 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: var(--size-triple);
 }
